# oakutils

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: black.yaml  build-check.yaml  mypy.yaml  pyright.yaml  release-publish.yaml  ruff.yaml  test-publish.yaml  unittests-macos.yaml  unittests-ubuntu.yaml  unittests-windows.yaml  unittests.yaml
blobs/: gaussian_11x11.blob  gaussian_15x15.blob  gaussian_7x7.blob  laplacian_11x11.blob  laplacian_3x3.blob  laplacian_5x5.blob  sobel_blur_13x13.blob  sobel_blur_15x15.blob
blobs/definitions/: __init__.py  gaussian.py  laplacian.py
ci/: build_example_docs.py  compile_models.py  make_stubs.py  pyupgrade.sh  run_tests.bat  run_tests.sh
docs/: api.rst  compiling.rst  conf.py  examples.rst  index.rst  installation.rst  optimizing.rst  requirements.txt  usage.rst  vpu.rst
docs/examples/: api_camera.rst  legacy_camera.rst  webcam.rst
docs/examples/aruco/: finder.rst  localizer.rst  stream.rst  webcam.rst
docs/examples/benchmark/: latency.rst  throughput.rst
docs/examples/blobs/: benchmark_blob.rst  compile_model.rst
docs/examples/calibration/: calibration.rst  oak1_calibration.rst  oakd_calibration.rst
docs/examples/core/: create_device.rst
docs/examples/nodes/: color_camera.rst  image_manip.rst  imu.rst  mono_camera.rst  neural_network.rst  rgb_depth.rst  stereo_depth.rst
docs/examples/optimizer/: optimizer.rst
docs/examples/point_clouds/: visualizer.rst
docs/examples/vpu/: multi_configure.rst  multi_model.rst  simple.rst
docs/source/: modules.rst  oakutils.aruco.rst  oakutils.benchmark.rst  oakutils.blobs.definitions.rst  oakutils.blobs.definitions.utils.rst  oakutils.blobs.models.rst  oakutils.blobs.models.shave1.rst  oakutils.blobs.models.shave2.rst  oakutils.blobs.models.shave3.rst  oakutils.blobs.models.shave4.rst  oakutils.blobs.models.shave5.rst  oakutils.blobs.models.shave6.rst  oakutils.blobs.rst  oakutils.calibration.rst  oakutils.core.rst  oakutils.filters.rst  oakutils.nodes.buffer.rst  oakutils.nodes.models.rst  oakutils.nodes.rst  oakutils.optimizer.rst  oakutils.point_clouds.rst  oakutils.rst  oakutils.tools.rst  oakutils.utils.rst  oakutils.vpu.rst
examples/: api_camera.py  aruco.py  calibration.py  camera.py  laplacian.py  legacy_camera.py  oak_camera.py  point_cloud.py  vpu.py  webcam.py
examples/advanced/: gaussian.py  grayscale_laplacian.py
examples/aruco/: finder.py  localizer.py  stream.py  webcam.py
examples/benchmark/: latency.py  throughput.py
examples/blobs/: benchmark_blob.py  compile_model.py
examples/blobs/testing/: evaluator.py  evaluator_u8_input.py
examples/blobs/yolov8n_160/: yolov8n_160.json
examples/calibration/: calibration.py  oak1_calibration.py  oakd_calibration.py
examples/core/: create_device.py
examples/nodes/: color_camera.py  gaussian.py  grayscale_laplacian.py  image_manip.py  imu.py  laplacian.py  mono_camera.py  neural_network.py  rgb_depth.py  stereo_depth.py
examples/nodes/models/: gaussian.py  gftt.py  harris.py  hessian.py  (+6 more)
examples/optimizer/: optimizer.py  test.py
examples/point_clouds/: visualizer.py
examples/vpu/: multi_configure.py  multi_model.py  simple.py
models/: generate.py  test_definitions.py
models/definitions/: __init__.py  canny.py  gaussian.py  gaussian_gray.py  laplacian.py  laplacian_gray.py  sobel.py  sobel_blur.py
models/onnx/: depth_filter_11x11.onnx  depth_filter_13x13.onnx  depth_filter_15x15.onnx  depth_filter_3x3.onnx  depth_filter_5x5.onnx  depth_filter_7x7.onnx  depth_filter_9x9.onnx  gaussian_11x11.onnx  gaussian_11x11_1_0.onnx  gaussian_11x11_1_5.onnx  gaussian_11x11_2_0.onnx  gaussian_13x13.onnx  gaussian_15x15.onnx  gaussian_3x3.onnx  gaussian_3x3_1_0.onnx  gaussian_3x3_1_5.onnx  gaussian_3x3_2_0.onnx  gaussian_5x5.onnx  gaussian_5x5_1_0.onnx  gaussian_5x5_1_5.onnx  gaussian_5x5_2_0.onnx  gaussian_7x7.onnx  gaussian_7x7_1_0.onnx  gaussian_7x7_1_5.onnx  gaussian_7x7_2_0.onnx  gaussian_9x9.onnx  gaussian_9x9_1_0.onnx  gaussian_9x9_1_5.onnx  gaussian_9x9_2_0.onnx  gaussian_gray_11x11.onnx  gaussian_gray_13x13.onnx  gaussian_gray_15x15.onnx  gaussian_gray_3x3.onnx  gaussian_gray_5x5.onnx  gaussian_gray_7x7.onnx  gaussian_gray_9x9.onnx  grayscale_gaussian_11x11.onnx  grayscale_gaussian_13x13.onnx  grayscale_gaussian_15x15.onnx  grayscale_gaussian_3x3.onnx  (+32 more)
oakutils/: __init__.py  api_camera.py  camera.py  legacy_camera.py  sdk_camera.py
oakutils/blobs/: __init__.py
oakutils/calibration/: _classes.py  _funcs.py
oakutils/filters/: __init__.py  wls.py
oakutils/nodes/: __init__.py  color_camera.py  image_manip.py  imu.py  mono_camera.py  neural_network.py  stereo_depth.py
oakutils/point_clouds/: __init__.py  _classes.py  _funcs.py  callbacks.py
oakutils/tools/: __init__.py  depth.py  display.py  parsing.py  pixel.py  spatial.py
oakutils/utils/: __init__.py  display.py
scripts/: build_example_docs.py  compile_models.py  make_stubs.py  model_tester.py  model_visualizer.py  pyupgrade.sh  run_tests.bat  torch_to_onnx.py  update_version.sh  wsl_usbipd.py
scripts/ci/: mypy.sh
src/oakutils/: __init__.py  _api_camera.py  _legacy_camera.py  _vpu.py  _webcam.py  api_camera.py  camera.py  core.py  legacy_camera.py  oak_camera.py  vpu.py  webcam.py
tests/: camera.py  camera_test.py  check_models_install.py  check_models_run.py  check_vpu.py  device.py  display_manager.py  display_manager_test.py  helpers.py  legacy_camera_test.py  oak_camera.py
tests/_utils/: __init__.py  images.py  stop.py
tests/blobs/: __init__.py  test_dirs.py  test_install.py  test_paths.py
tests/models/: check_gaussian.py  check_gftt.py  check_harris.py  check_hessian.py  check_laplacian.py  check_pointcloud.py  check_sobel.py
tests/vpu/: __init__.py  check_multi_network.py  check_reconfigure.py  check_single_model.py  test_multi_model_reconfigure.py  test_reconfigure.py  test_vpu.py
typings/blobconverter/: __init__.pyi
typings/depthai/: __init__.pyi  node.pyi
typings/onnxsim/: __init__.pyi  onnx_simplifier.pyi
typings/open3d/: __init__.pyi  core.pyi
(+2673 files in other folders)
