[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oakutils"
version = "1.0.1"
authors = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
maintainers = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Typing :: Typed",
]
requires-python=">=3.8"
dependencies = [
    "depthai>=2.20",
    "depthai-sdk>=1.11.0",
    "numpy>=1.20",
    "open3d>=0.16",
    "opencv-contrib-python>=4.5",
    "typing_extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/justincdavis/oakutils"
"Bug Tracker" = "https://github.com/justincdavis/oakutils/issues"

[project.optional-dependencies]
compiler = [
    "kornia",
    "torch",
    "onnx>=1.12.0",
    "onnxruntime",
    "onnxsim",
    "blobconverter==1.4.2",
]
dev = [
    "oakutils[compiler]",
    "pyupgrade",
    "black",
    "isort",
    "ruff",
    "mypy",
    "twine",
    "wheel",
    "bumpver",
    "sphinx",
    "sphinx-rtd-theme",
    "pyclean",
]

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/oakutils/__init__.py" = ["{version}"]
"docs/conf.py" = ["{version}"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oakutils = ["src/*.blob"]

[tool.ruff]
select = ["SLOT", "RUF", "FURB", "PERF", "FLY", "PGH", "INT", "TCH", "TID", "SIM", "PYI", "PIE", "INP", "ISC", "ICN", "ANN", "UP", "YTT", "W", "N", "A", "E", "F", "I", "BLE", "B", "FBT", "C4", "FA", "SLF", "RET", "ARG", "NPY"]
ignore = ["C901", "E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
fix = true
show-fixes = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

# Other options
builtins = ["_"]
