[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oakutils"
version = "1.4.2"
authors = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
maintainers = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Typing :: Typed",
]
requires-python=">=3.8, <3.11"
dependencies = [
    "depthai>=2.22",
    "numpy>=1.20,<2.0",
    "open3d>=0.16",
    "opencv-contrib-python>=4.8",
    "typing_extensions>=4.0.0",
    "setuptools",
]

[project.urls]
"Homepage" = "https://github.com/justincdavis/oakutils"
"Bug Tracker" = "https://github.com/justincdavis/oakutils/issues"

[project.optional-dependencies]
compiler = [
    "kornia",
    "torch",
    "onnx>=1.12.0",
    "onnxruntime",
    "onnxsim",
    "blobconverter==1.4.2",
    "requests",
    "boto3==1.7.84",
    "botocore==1.10.84",
]
ci = [
    "pyupgrade>=3.10",
    "black>=24.0",
    "isort>=5.10",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-setuptools",
    "types-requests",
]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst_parser",
]
dev = [
    "oakutils[compiler]",
    "oakutils[ci]",
    "oakutils[test]",
    "oakutils[docs]",
    "twine",
    "wheel",
    "bumpver",
    "pyclean",
    "pyright>=1.1.50",
]

[tool.bumpver]
current_version = "1.4.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/oakutils/__init__.py" = ["{version}"]
"docs/conf.py" = ["{version}"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oakutils = ["src/*.blob"]

[tool.ruff]
select = ["ALL", "PLR2004"]
ignore = ["PLR", "C901", "E501", "D203", "D212", "ERA"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
fix = true
show-fixes = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

# Other options
builtins = ["_"]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = false
disallow_untyped_decorators = true
disallow_any_generics = false
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true

# ignore cv2, open3d, blobconverter
[[tool.mypy.overrides]]
module = [  
    'cv2',
    'open3d',
    'onnxsim',
    'blobconverter',
]
ignore_errors = true

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
]

ignore = ["scripts/*"]

defineConstant = {DEBUG = true}
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
  
pythonVersion = "3.8"
pythonPlatform = "Linux"

executionEnvironments = [
    { root = "src", pythonVersion = "3.8", stubPath = "typings" },
]
